--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "4.24.3",
+    "@strapi/plugin-graphql": "^4.24.3",
     "@strapi/plugin-i18n": "4.24.3",
     "@strapi/plugin-users-permissions": "4.24.3",
     "@strapi/provider-upload-cloudinary": "^4.24.3",
@@ -28,7 +29,7 @@
     "uuid": "b953b268-89c2-4a12-aff0-6f2050bd2e4d"
   },
   "engines": {
-    "node": ">=18.0.0 <=18.x.x",
+    "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
