--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,11 @@ JWT_SECRET=tobemodified
 CLOUDINARY_NAME=tobemodified
 CLOUDINARY_KEY=tobemodified
 CLOUDINARY_SECRET=tobemodified
+DATABASE_CLIENT=tobemodified
+DATABASE_HOST=tobemodified
+DATABASE_PORT=tobemodified
+DATABASE_NAME=tobemodified
+DATABASE_USERNAME=tobemodified
+DATABASE_PASSWORD=tobemodified
+DATABASE_SSL=tobemodified
+DATABASE_URL=tobemodified
