add deploy config

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ DATABASE_USERNAME=tobemodified
 DATABASE_PASSWORD=tobemodified
 DATABASE_SSL=tobemodified
 DATABASE_URL=tobemodified
+# Deploy
+VERCEL_DEPLOY_PLUGIN_HOOK=tobemodified
+VERCEL_DEPLOY_PLUGIN_API_TOKEN=tobemodified
+VERCEL_DEPLOY_PLUGIN_APP_FILTER=tobemodified
+VERCEL_DEPLOY_PLUGIN_TEAM_FILTER=tobemodified
